<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:textAlignment="center"
        android:textColor="@color/personalizado"
        android:textSize="50sp"
        android:layout_marginBottom="50sp"/>

    <EditText
        android:id="@+id/edtNumero1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_1"
        android:layout_marginBottom="20dp"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edtNumero2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_2"
        android:layout_marginBottom="20dp"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/resultado"
        android:layout_marginBottom="20dp"
        android:focusable="false"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edtOperacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/operacion"
        android:layout_marginBottom="40dp"
        android:inputType="text" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/calcular" />

    <Button
        android:id="@+id/btnNavegar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navegar" />
</LinearLayout>